packages/frontend/editor-ui/src/features/settings/sso/styles/sso-form.module.scss
/**
 * Shared styles for SSO forms
 */

.switch {
	span {
		font-size: var(--font-size--2xs);
		font-weight: var(--font-weight--bold);
		color: var(--color--text--tint-1);
	}
}

.buttons {
	display: flex;
	justify-content: flex-start;
	padding: var(--spacing--2xl) 0 var(--spacing--2xs);

	button {
		margin: 0 var(--spacing--sm) 0 0;
	}
}

.group {
	padding: var(--spacing--xl) 0 0;

	> label {
		display: inline-block;
		font-size: var(--font-size--sm);
		font-weight: var(--font-weight--bold);
		color: var(--color--text--shade-1);
		padding: 0 0 var(--spacing--2xs);
	}

	small {
		display: block;
		padding: var(--spacing--2xs) 0 0;
		font-size: var(--font-size--2xs);
		color: var(--color--text);
	}
}

.checkboxGroup label > *:first-child {
	// center checkbox next to label
	vertical-align: text-top;
}

.actionBox {
	margin: var(--spacing--2xl) 0 0;
}

.card {
	background: white;
	border: var(--border-width) var(--border-style) var(--color--foreground);
	border-radius: var(--radius--lg);
	padding: var(--spacing--4xs) var(--spacing--sm);
	margin-bottom: var(--spacing--lg);
}

.settingsItem {
	display: flex;
	align-items: center;
	justify-content: space-between;
	min-height: 64px;
	padding: var(--spacing--xs) 0;
	border-bottom: var(--border-width) var(--border-style) var(--color--foreground--tint-1);

	&:last-child {
		border-bottom: none;
	}
}

.settingsItemLabel {
	display: flex;
	flex-direction: column;
	gap: var(--spacing--4xs);
	flex-shrink: 0;
	width: 320px;

	label {
		font-size: var(--font-size--sm);
		font-weight: var(--font-weight--bold);
		color: var(--color--text--shade-1);
	}

	small {
		font-size: var(--font-size--2xs);
		color: var(--color--text--tint-1);
	}
}

.settingsItemControl {
	flex: 1;
	display: flex;
	justify-content: flex-end;
}

.ipsBlock {
	padding: 0 0 var(--spacing--xs);

	small {
		display: block;
		padding: var(--spacing--2xs) 0 0;
		font-size: var(--font-size--2xs);
		color: var(--color--text--tint-1);
	}
}

.footer {
	color: var(--color--text);
	font-size: var(--font-size--2xs);
}

